# fastapi_template

./: pyproject.toml
alembic/: env.py
alembic/versions/: 045518420c31_create_users.py
app/: database.py  main.py
app/config/: base_config.py
app/domain/auth/: auth_service.py
app/domain/auth/models/: user.py
app/domain/auth/schemas/: user_schemas.py
app/routers/: user_router.py
